--- a/cv_config.json
+++ b/cv_config.json
@@ -1,6 +1,6 @@
 {
     "resblock": "1",
-    "num_gpus": 0,
+    "num_gpus": 2,
     "batch_size": 16,
     "learning_rate": 0.0002,
     "adam_b1": 0.8,
@@ -22,6 +22,9 @@
     "win_size": 1024,
 
     "sampling_rate": 22050,
+
+    "project_name": "HiFi-GAN",
+    "mode": "offline",
 
     "fmin": 0,
     "fmax": 8000,
